Ingress_controller/blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp
      version: blue
  template:
    metadata:
      labels:
        app: myapp
        version: blue

    spec:
      containers:
        - image: abhishekf5/python-sample-app-demo:v1
          name: blue-container
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp2
      version: green
  template:
    metadata:
      labels:
        app: myapp2
        version: green

    spec:
      volumes:
        - name: myconf
          configMap:
             name: conf
      containers:


        - image: abhishekf5/python-sample-app-demo:v1
          name: blue-container
          volumeMounts:
            - name: myconf
              mountPath: /etc/conf


          ports:
            - containerPort: 8080
