Ingress_controller/green-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: green
  template:
    metadata:
      labels:
        app: myapp
        version: green

    spec:
      containers:
        - image: devopswithcloudhub/python_webpage:green
          name: green-container
          ports:
            - containerPort: 8080
