Ingress_controller/blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  selector:
    app: myapp
    version: blue
  ports:
    - port: 8080
      targetPort: 8080
      protocol: Tcp
