Ingress_controller/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  selector:
    app: myapp
    version: green
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
