Ingress_controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue-svc
            port:
              number: 80

      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green-svc
            port:
              number: 80


#get svc
#helm repo update
#helm install my-ingress-nginx ingress-nginx/ingress-nginx --version 4.0.13
